--- a/ConsoleApplication9/ConsoleApplication9.csproj
+++ b/ConsoleApplication9/ConsoleApplication9.csproj
@@ -48,6 +48,7 @@
     <Compile Include="Components\Channel.cs" />
     <Compile Include="Devices\Heater.cs" />
     <Compile Include="Devices\Fridge.cs" />
+    <Compile Include="Factory.cs" />
     <Compile Include="Interface%281%29\IChannel.cs" />
     <Compile Include="Interface%281%29\ILight1.cs" />
     <Compile Include="Interface%282%29\ILight.cs" />
@@ -62,7 +63,6 @@
     <Compile Include="Interface%282%29\Network.cs" />
     <Compile Include="Devices\OnOff.cs" />
     <Compile Include="Interface%281%29\ITemp.cs" />
-    <Compile Include="Interface%281%29\ISet.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Devices\SmartTV.cs" />
