--- a/ConsoleApplication9/SmartHouse.csproj
+++ b/ConsoleApplication9/SmartHouse.csproj
@@ -43,28 +43,28 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="IMinMax.cs" />
-    <Compile Include="Interfaces%281%29\IOnOff.cs" />
+    <Compile Include="ModuleInterfaces\IParamModule.cs" />
+    <Compile Include="DeviceInterfaces\IOnOff.cs" />
     <Compile Include="Devices\Blender.cs" />
     <Compile Include="Enums\BlenderModes.cs" />
     <Compile Include="Components\Channel.cs" />
     <Compile Include="Devices\Heater.cs" />
     <Compile Include="Devices\Fridge.cs" />
     <Compile Include="Factory\Factory.cs" />
-    <Compile Include="Interfaces%281%29\IChannel1.cs" />
-    <Compile Include="Interfaces%281%29\ILight1.cs" />
-    <Compile Include="Interfaces%282%29\ILight.cs" />
-    <Compile Include="Interfaces%282%29\IMode.cs" />
-    <Compile Include="Interfaces%281%29\IModes.cs" />
-    <Compile Include="Interfaces%281%29\IParam.cs" />
-    <Compile Include="Interfaces%282%29\ITemperature.cs" />
+    <Compile Include="DeviceInterfaces\IChannelDevice.cs" />
+    <Compile Include="DeviceInterfaces\ILightDevice.cs" />
+    <Compile Include="ModuleInterfaces\ILightModule.cs" />
+    <Compile Include="ModuleInterfaces\IModeModule.cs" />
+    <Compile Include="DeviceInterfaces\IModeDevice.cs" />
+    <Compile Include="DeviceInterfaces\IParamDevice.cs" />
+    <Compile Include="ModuleInterfaces\ITempModule.cs" />
     <Compile Include="Devices\Conditioner.cs" />
     <Compile Include="Devices\Lamp.cs" />
     <Compile Include="Components\Light.cs" />
     <Compile Include="Components\BlenderMode.cs" />
-    <Compile Include="Interfaces%282%29\IChannel.cs" />
+    <Compile Include="ModuleInterfaces\IChannelModule.cs" />
     <Compile Include="Devices\OnOff.cs" />
-    <Compile Include="Interfaces%281%29\ITemp.cs" />
+    <Compile Include="DeviceInterfaces\ITempDevice.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Devices\TV.cs" />
